Initial commit without venv folder

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,14 @@ Dependencies.toml
 
 # config files
 Config.toml
-# the config files used for testing, Uncomment the following line if you want to commit the test config files
 #!**/tests/Config.toml
+
+# Python stuff
+venv/
+__pycache__/
+*.pyc
+*.pkl
+*.log
+
+# macOS system file
+.DS_Store
